set grid position for each project, cursor ux nav

--- a/nuxt/assets/_projects.scss
+++ b/nuxt/assets/_projects.scss
@@ -1,11 +1,13 @@
 .elliot {
-  grid-column: 7/13;
+  grid-column: 5/13;
 }
 
 .graphics {
   grid-column: 4/11;
+  height: 55vh;
 }
 
 .zine {
   grid-column: 1/4;
+  height: 55vh;
 }
