--- a/nuxt/assets/_projects.scss
+++ b/nuxt/assets/_projects.scss
@@ -3,10 +3,20 @@
 }
 
 .graphics {
-  grid-column: 4/10;
+  grid-row: 4;
+  grid-column: 6/12;
 }
 
 .zine {
-  grid-column: 1/4;
-  height: 55vh;
+  grid-column: 2/11;
+}
+
+.uganda {
+  grid-row: 3;
+  grid-column: 2/10;
+}
+
+.typography {
+  grid-row: 4;
+  grid-column: 2/5;
 }
