--- a/nuxt/assets/_projects.scss
+++ b/nuxt/assets/_projects.scss
@@ -1,22 +1,22 @@
 .elliot {
-  grid-column: 5/13;
+  grid-column: 5/12;
 }
 
 .graphics {
   grid-row: 4;
-  grid-column: 6/12;
+  grid-column: 5/12;
 }
 
 .zine {
-  grid-column: 2/11;
+  grid-column: 5/12;
 }
 
 .uganda {
   grid-row: 3;
-  grid-column: 2/10;
+  grid-column: 5/12;
 }
 
 .typography {
-  grid-row: 4;
-  grid-column: 2/5;
+  // grid-row: 4;
+  grid-column: 5/12;
 }
