--- a/nuxt/assets/_projects.scss
+++ b/nuxt/assets/_projects.scss
@@ -1,23 +1,23 @@
 .elliot {
-  grid-column: 4/11;
+  grid-column: 4/10;
 }
 
 .graphics {
-  grid-row: 3;
-  grid-column: 4/11;
+  // grid-row: 3;
+  grid-column: 1/5;
 }
 
 .zine {
-  grid-row: 5;
-  grid-column: 4/11;
+  // grid-row: 5;
+  grid-column: 4/10;
 }
 
 .uganda {
-  grid-row: 6;
-  grid-column: 4/11;
+  //grid-row: 6;
+  grid-column: 4/10;
 }
 
 .typography {
   // grid-row: 4;
-  grid-column: 4/11;
+  grid-column: 4/10;
 }
