changed landing page, added contact list

--- a/nuxt/assets/_typography.scss
+++ b/nuxt/assets/_typography.scss
@@ -30,3 +30,7 @@
   font-family: Canela-Light, serif;
   font-style: normal;
 }
+
+@mixin IBM-Plex-Mono {
+  font-family: "IBM Plex Mono", monospace;
+}
